<resources>
    <string name="app_name">My Quiz Application</string>
    <string name="question1">1. Budapest is the capital city of which country?</string>
    <string name="answer1a">Slovakia</string>
    <string name="answer1b">Hungary</string>
    <string name="answer1c">Italy</string>
    <string name="answer1d">Spain</string>
    <string name="question2">2. What is the capital city of India?</string>
    <string name="answer2">Capital city</string>
    <string name="question3">3. California borders which states?</string>
    <string name="answer3a">Oregon</string>
    <string name="answer3b">Utah</string>
    <string name="answer3c">Idaho</string>
    <string name="answer3d">Nevada</string>
    <string name="answer3e">Nebraska</string>
    <string name="answer3f">Arizona</string>
    <string name="question4">4. This flag belongs to which country?</string>
    <string name="answer4a">Denmark</string>
    <string name="answer4b">Kazakhstan</string>
    <string name="answer4c">United Kingdom</string>
    <string name="answer4d">Sweden</string>
    <string name="question5">5. In which city is the Colosseum?</string>
    <string name="answer5">City</string>
    <string name="question6">6. Which are the 3 longest rivers in North America?</string>
    <string name="answer6a">Columbia</string>
    <string name="answer6b">Yucon</string>
    <string name="answer6c">Mississippi</string>
    <string name="answer6d">Missouri</string>
    <string name="answer6e">Colorado</string>
    <string name="answer6f">Arkansas</string>
    <string name="question7">7. How long is the Equator?</string>
    <string name="answer7a">40.075 km (24.901 miles)</string>
    <string name="answer7b">37.104 km (23.055 miles)</string>
    <string name="answer7c">60.505 km (37.596 miles)</string>
    <string name="answer7d">105.710 km (65.685 miles)</string>
    <string name="question8">8. What is the southernmost capital city in South Africa?</string>
    <string name="answer8">Capital city</string>
    <string name="question9">9. Which are the 3 capital cities of South Africa?</string>
    <string name="answer9a">Pretoria</string>
    <string name="answer9b">Kimberley</string>
    <string name="answer9c">Port Elizabeth</string>
    <string name="answer9d">Johannesburg</string>
    <string name="answer9e">Cape Town</string>
    <string name="answer9f">Bloemfontein</string>
    <string name="submit">Submit</string>
    <string name="congratulations">Congratulations!</string>
    <string name="result">Your result:</string>
    <string name="newdelhi">New Delhi</string>
    <string name="rome">Rome</string>
    <string name="capetown">Cape Town</string>
    <string name="tryagain">Try again!</string>
    <string name="goodjob">Good job!</string>
</resources>
